Completed main API

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "asyncpg==0.30.0",
+    "fastapi==0.115.12",
+    "pydantic==2.11.3",
+    "pydantic-settings==2.8.1",
+    "sqlalchemy[asyncio]==2.0.40",
+]
