--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,11 @@ dependencies = [
     "fastapi==0.115.12",
     "pydantic==2.11.3",
     "pydantic-settings==2.8.1",
+    "pytest==8.3.5",
+    "pytest-asyncio==0.26.0",
     "sqlalchemy[asyncio]==2.0.40",
 ]
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
+
