--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic==1.15.2",
     "asyncpg==0.30.0",
     "fastapi==0.115.12",
     "pydantic==2.11.3",
@@ -12,6 +13,7 @@ dependencies = [
     "pytest==8.3.5",
     "pytest-asyncio==0.26.0",
     "sqlalchemy[asyncio]==2.0.40",
+    "uvicorn==0.34.0",
 ]
 
 [tool.pytest.ini_options]
